# agent-apkt

./: .gitignore  DOCUMENTATION_INDEX.md  QUICK_START_ADMIN.md  README.md  SETUP_CHECKLIST.md  apkt-agent-af84fa7cde8f.json  auto_test.py  config.example.yaml  pyproject.toml  run_automated.py  run_cli.sh  test_config.py  test_download_flow.sh  test_filter.py  test_headless.py  test_headless.sh  test_tanggal.py  units_selection.yaml
credentials/: config.yaml  credentials.yaml  units_selection.yaml
docs/: 20260107-apkt-agent-flow.md  20260107-apkt-agent-overview.md  20260107-data-schema-se004-kumulatif.md  20260107-google-sheets-integration.md  20260108-headless-mode-fix.md  CREDENTIAL_DISTRIBUTION.md  DOCUMENTATION_INDEX.md  HEADLESS_QUICK_FIX.md  QUICK_START_ADMIN.md  README_INSTALL.md  SETUP_CHECKLIST.md
sandbox/menu 3/: APKT Saidi Saifi.html
sandbox/menu 3/APKT Saidi Saifi_files/: index-pqREpwKL.css
sandbox/menu 4/: APKT Saidi Saifi.html
src/apkt_agent/: __init__.py  __main__.py  cli.py  config.py  errors.py  logging_.py  main.py  models.py  workspace.py
src/apkt_agent/browser/: auth.py  download.py  driver.py  nav.py
src/apkt_agent/datasets/: __init__.py  base.py  registry.py
src/apkt_agent/datasets/se004/: __init__.py  bulanan.py  detail_gangguan.py  extract_filters.py  gangguan.py  koreksi_cleansing.py  kumulatif.py  multi_download.py  parser.py  parser_detail_gangguan.py  rolling.py  (+2 more)
src/apkt_agent/output/: csv_writer.py
src/apkt_agent/sinks/: __init__.py  api.py  sheets.py
src/apkt_agent/transform/: __init__.py  normalize.py  validate.py
